[project]
name = "is-this-available"
version = "0.1.0"
description = "Is this available? Before naming your project, check if that name is widely available across TLDs and socials!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
    "streamlit>=1.59.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
